--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Habit Tracker Life Enhancer</title>
-    <base href="/Life-Enhancer-Habit-Tracker/" />
+    <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Life-Enhancer-Habit-Tracker.styles.css" rel="stylesheet" />
